--- a/content/syllabus/index.Rmd
+++ b/content/syllabus/index.Rmd
@@ -21,47 +21,19 @@ library(pander)
 
 ## Overview
 
-This is a half-semester graduate seminar. It's self-contained, but goes well with its companion on Data Management, taught in the second half on the semester.
+This is a semester graduate? seminar. The course is lab-based (60-90 minutes of teaching + 90-120 minutes of lab each week).
 
 ## Course objectives
 
-This class will teach you how to use modern, widely-used tools to create insightful, effective, reproducible visualizations of social science data. We will also put the theory and practice of visualization into context. By that I mean that we will think about different ways of looking at social science data, about where data comes from in the first place, and the implications of choosing to represent it in different ways.
 
-By the end of the course you will
-
-- Understand the basic principles behind effective data visualization.
-- Have a practical sense for why some graphs and figures work well,
-  while others may fail to inform or actively mislead.
-- Know how to create a wide range of plots in R using ggplot2.
-- Know how to refine plots for effective presentation.
 
 ## Core Texts
 
-I strongly recommend (but do not require) you buy two books: 
-
-- [@Healy:2019] [Draft version free online; print version at [Amazon](https://amzn.to/2vfAixM) and all good bookshops.]
-- [@WickhamGrolemund:2017] [Free online; print version at [Amazon](https://www.amazon.com/R-Data-Science-Hadley-Wickham/dp/1491910399/) and all good bookshops.]
-
-You should also be aware of:
-
-- [@Wilke:2019] [Draft version free online; print version at  [Amazon](https://www.amazon.com/Fundamentals-Data-Visualization-Informative-Compelling/dp/1492031089)]
-
+We will be using the book [R Programming for Data Science](https://leanpub.com/rprogramming) by [Roger D. Peng](http://www.biostat.jhsph.edu/~rpeng/) as our main text. The book is freely avaliable [online](https://bookdown.org/rdpeng/rprogdatascience/) but [pdf](https://leanpub.com/rprogramming) versions and [printed](http://www.lulu.com/shop/http://www.lulu.com/shop/roger-peng/r-programming-for-data-science/paperback/product-22655166.html) versions are avaliable too. Other texts will be used from class to class and will be detailed in [Readings](/reading).
 
 ## Other Material 
 
-We may also read other material as we go. I will make it available to you beforehand. It will include material from the following books, amongst other sources:
-
-- [@battle-baptiste18:_w]
-- [@berinato16:_good_chart]
-- [@cairo16:_truth_art]
-- [@cleveland1994]
-- [@few09:_now_you_see_it]
-- [@lupton10:_think_type]
-- [@munzer14:_visual_analy_desig]
-- [@tufte83:_visual_displ_quant_infor]
-- [@ware08:_visual_think_desig]
-- [@yau11:_visual_this]
-
+- [R for Data Science](https://r4ds.had.co.nz/) by Garrett Grolemund & Hadley Wickham. Is another highly rated book which covers many of the same topics as R Programming for Data Science.
 
 ## Software
 
@@ -73,28 +45,79 @@ You will need to install some software first. Here is what to do:
 2. Once R is installed, [download and install R Studio](http://rstudio.com). R Studio is an "Integrated Development Environment", or IDE. This means it is a front-end for R that makes it much easier to work with. R Studio is also free, and available for Windows, Mac, and Linux platforms.
 3. [Install the tidyverse library](http://tidyverse.org) and several other add-on packages for R. These libraries provide useful functionality that we will take advantage of throughout the book. You can learn more about the tidyverse's family of packages at its website.
 
-   To install the tidyverse, make sure you have an Internet connection and then launch R Studio. Type the following lines of code at R's command prompt, located in the window named "Console", and hit return. In the code below, the `<-` arrow is made up of two keystrokes, first `<` and then the short dash or minus symbol, `-`.
+  To install the tidyverse, make sure you have an Internet connection and then launch R Studio. Type the following lines of code at R's command prompt, located in the window named "Console", and hit return. In the code below, the `<-` arrow is made up of two keystrokes, first `<` and then the short dash or minus symbol, `-`.
 
 ```{r, echo=TRUE, eval=FALSE, tidy = FALSE}
-my_packages <- c("tidyverse", "broom", "cowplot", "drat",
-                 "gapminder", "GGally", "ggforce", "ggrepel", "ggridges", "gridExtra",
-                 "here", "interplot", "margins", "maps", "mapproj",
-                 "mapdata", "MASS", "quantreg", "rlang", "scales",
-                 "survey", "srvyr", "devtools")
+my_packages <- c("tidyverse")
 
 install.packages(my_packages, repos = "http://cran.rstudio.com")
 ```
 
 R Studio should then download and install these packages for you. It may take a little while to download everything.
 
-With these packages available, you can then install one last library of material that's useful specifically for this course:
-
-```{r, echo=TRUE, eval=FALSE}
-install.packages("socviz", repos = "http://cran.rstudio.com")
-```
-
 ## Schedule
 
 `r blogdown::shortcode("topiclist")`
 
 As the weeks go by, consult the [Schedule Page](/schedule/) for more information on weekly topics, problem sets, readings, and other materials. The schedule is likely to change as we go. Links to readings, assignments, and other materials from class will be posted on that page. 
+
+
+## Statement for students with disabilities
+
+Any student requesting academic accommodations based on a disability is required to register with Disability Services and Programs (DSP) each semester. A letter of verification for approved accommodations can be obtained from DSP. Please be sure the letter is delivered to me (or to TA) as early in the semester as possible. DSP is located in STU 301 and is open 8:30 a.m.–5:00 p.m., Monday through Friday. The phone number for DSP is (213) 740-0776.
+
+## Statement on academic conduct and support systems
+
+### Academic Conduct:
+
+Plagiarism – presenting someone else’s ideas as your own, either verbatim or recast in
+your own words – is a serious academic offense with serious consequences. Please
+familiarize yourself with the discussion of plagiarism in SCampus in Part B, Section 11,
+“Behavior Violating University Standards” policy.usc.edu/scampus-part-b. Other forms
+of academic dishonesty are equally unacceptable. See additional information in SCampus
+and university policies on scientific misconduct, policy.usc.edu/scientific-misconduct.
+
+### Support Systems:
+
+*Student Health Counseling Services - (213) 740-7711 – 24/7 on call*  
+[engemannshc.usc.edu/counseling](engemannshc.usc.edu/counseling)  
+Free and confidential mental health treatment for students, including short-term psychotherapy, group counseling, stress fitness workshops, and crisis intervention.
+
+*National Suicide Prevention Lifeline - 1 (800) 273-8255 – 24/7 on call*  
+[suicidepreventionlifeline.org](suicidepreventionlifeline.org)  
+Free and confidential emotional support to people in suicidal crisis or emotional distress 24 hours a day, 7 days a week.
+
+*Relationship and Sexual Violence Prevention Services (RSVP) - (213) 740-4900 – 24/7 on call*  
+[engemannshc.usc.edu/rsvp](engemannshc.usc.edu/rsvp)  
+Free and confidential therapy services, workshops, and training for situations related to gender-based harm.
+
+*Office of Equity and Diversity (OED) | Title IX - (213) 740-5086*  
+[equity.usc.edu](equity.usc.edu), [titleix.usc.edu](titleix.usc.edu)  
+Information about how to get help or help a survivor of harassment or discrimination, rights of protected classes, reporting options, and additional resources for students, faculty, staff, visitors, and applicants. The university prohibits discrimination or harassment based on the following protected characteristics: race, color, national origin, ancestry, religion, sex, gender, gender identity, gender expression, sexual orientation, age, physical disability, medical condition, mental disability, marital status, pregnancy, veteran status, genetic information, and any other characteristic which may be specified in applicable laws and governmental regulations.
+
+*Bias Assessment Response and Support - (213) 740-2421*  
+[studentaffairs.usc.edu/bias-assessment-response-support](studentaffairs.usc.edu/bias-assessment-response-support)  
+Avenue to report incidents of bias, hate crimes, and microaggressions for appropriate investigation and response.
+
+*The Office of Disability Services and Programs - (213) 740-0776*  
+[dsp.usc.edu](dsp.usc.edu)  
+Support and accommodations for students with disabilities. Services include assistance in providing readers/notetakers/interpreters, special accommodations for test taking needs, assistance with architectural barriers, assistive technology, and support for individual needs.
+
+*ServicUSC Support and Advocacy - (213) 821-4710*  
+[studentaffairs.usc.edu/ssa](studentaffairs.usc.edu/ssa)  
+Assists students and families in resolving complex personal, financial, and academic issues adversely affecting their success as a student.
+
+*Diversity at USC - (213) 740-2101*  
+[diversity.usc.edu](diversity.usc.edu)  
+Information on events, programs and training, the Provost’s Diversity and Inclusion Council, Diversity Liaisons for each academic school, chronology, participation, and various resources for students.
+
+*USC Emergency - UPC: (213) 740-4321, HSC: (323) 442-1000 – 24/7 on call*  
+[dps.usc.edu](dps.usc.edu), [emergency.usc.edu](emergency.usc.edu)  
+Emergency assistance and avenue to report a crime. Latest updates regarding safety, including ways in which instruction will be continued if an officially declared emergency makes travel to campus infeasible.
+
+*USC Department of Public Safety - UPC: (213) 740-6000, HSC: (323) 442-120 – 24/7 on call*  
+[dps.usc.edu](dps.usc.edu)  
+Non-emergency assistance or information.
+
+
+
