--- a/content/reading/01-reading.Rmd
+++ b/content/reading/01-reading.Rmd
@@ -1,12 +1,27 @@
 ---
-title: "Truth, Beauty, and Data"
+title: "Introduction to Data Science tools: R, R Markdown"
 date: "2018-09-04"
 citeproc: false
 bibliography: ../../static/bib/references.bib
 csl: ../../static/bib/chicago-fullnote-bibliography-no-bib.csl
 ---
 
-# Required
+# Required reading
 
-- [Chapter 1](http://socviz.co/lookatdata.html) in Kieran Healy, *Data Visualization* [@Healy:2019]
-- Chapters 2 and 3 in Alberto Cairo, *The Truthful Art* [@Cairo:2016] (*skim the introduction and chapter 1*)
+You are expected to have read this when you show up for the first day of class. The following items are all rather short and shouldn't take too long.
+The "How to read an R help page" section stops once you reach "A.1.2 The basics of accessing and selecting things".
+
+- The [Syllabus](/Syllabus)
+- rmarkdown lessons [1](https://rmarkdown.rstudio.com/lesson-1.html), [2](https://rmarkdown.rstudio.com/lesson-2.html), [3](https://rmarkdown.rstudio.com/lesson-3.html) and [8](https://rmarkdown.rstudio.com/lesson-8.html)
+- [How to read an R help page](https://socviz.co/appendix.html#a-little-more-about-r)
+
+Additionally depending on your previous knowledge I would recommend you take a look at the [programming basics primer](https://rstudio.cloud/learn/primers/1.2).
+
+# Optional reading
+
+The following articles are recommended (but not expected) for you to read if you want to get a glimpse into the world of data science and R as a language.
+
+- [How R changed me as an analyst](https://nhsrcommunity.com/blog/how-r-changed-me-as-an-analyst/)
+- [Data scientists mostly just do arithmetic and that’s a good thing](https://m.signalvnoise.com/data-scientists-mostly-just-do-arithmetic-and-thats-a-good-thing/)
+- [How rOpenSci uses Code Review to Promote Reproducible Science](https://ropensci.org/blog/2017/09/01/nf-softwarereview/)
+- [50 Years of Data Science](https://www.tandfonline.com/doi/full/10.1080/10618600.2017.1384734)
