--- a/static/slides/04-visualization/IntroToGGplot.Rmd
+++ b/static/slides/04-visualization/IntroToGGplot.Rmd
@@ -1,8 +1,10 @@
 ---
 title: "GGPlot2 for PM566"
 author: "Paul M"
-date: "3/26/2020"
+date: "5/11/2020"
 output:
+  html_document:
+    df_print: paged
   xaringan::moon_reader:
     css: metropolis.css ###theme.css  #cccc
     lib_dir: libs
@@ -15,8 +17,6 @@ output:
       titleSlideClass:
       - center
       - middle
-  html_document:
-    df_print: paged
 ---
 
 ```{r include=FALSE}
@@ -84,7 +84,7 @@ ggplot2 is part of the Tidyverse. The tidyverse is..."an opinionated collection 
 
 You will get to know it better later in the course.
 
-```{r , results='hide'}
+```{r , results='hide',message=FALSE}
 #install.packages("tidyverse")
 library(tidyverse)
 ```
@@ -94,7 +94,7 @@ library(tidyverse)
 ### Data frames
 ggplot2 is designed to work with data frames. 
 A data frame is a list of vectors (of equal length). The vectors can be of any type.
-For example, the following variable df is a data frame containing three vectors n, s, b.
+For example, the following variable df is a data frame containing three vectors 'index', 'animal', and 'owned'.
 ```{r}
 index = c(1, 2, 3) 
 animal = c("cat", "dog", "rabbit") 
@@ -113,8 +113,8 @@ head(mpg)
 ```
 The variables we will focus on for this example are
 
-* displ, a car’s engine size, in litres.
-* hwy, a car’s fuel efficiency on the highway, in miles per gallon (mpg). 
+* displ, a car???s engine size, in litres.
+* hwy, a car???s fuel efficiency on the highway, in miles per gallon (mpg). 
 
 ---
 
@@ -194,6 +194,8 @@ ggplot(data = mpg) +
 ---
 
 ### Summary of aesthetics
+The various aesthetics...
+
 ```{r table2, echo=FALSE, message=FALSE, warnings=FALSE, results='asis', eval=FALSE}
 tabl <- " 
 |code         |         description       | 
@@ -212,7 +214,7 @@ cat(tabl) # output the table in a format good for HTML/PDF/docx conversion
 
 ---
 
-#The various aestheticss...
+
 
 
 
@@ -251,16 +253,16 @@ ggplot(data = mpg) +
 
 ### Geometric objects 1
 
-Geometric objests are used to control the type of plot you draw.
+Geometric objects are used to control the type of plot you draw.
 So far we have used scatterplots (via 'geom_point'). But now let's try plotting a smoothed line fitted to the data (and note how we do side-by-side plots)
+
 ```{r, message=FALSE, out.width='70%'}
 library(cowplot)
-#library(gridExtra)
 scatterplot <- ggplot(data = mpg) + geom_point(mapping = aes(x = displ, y = hwy))
 lineplot <- ggplot(data = mpg) + geom_smooth(mapping = aes(x = displ, y = hwy))
 plot_grid(scatterplot, lineplot, labels = "AUTO")
-#grid.arrange(scatterplot, lineplot, ncol = 2)
 ```
+cowplot is a package due to Claus Wilke, it..." is a simple add-on to ggplot. It provides various features that help with creating publication-quality figures, such as a set of themes, functions to align plots and arrange them into complex compound figures, and functions that make it easy to annotate plots and or mix plots with images."
 
 ---
 
@@ -272,6 +274,7 @@ ggplot(data = mpg) +
   geom_smooth(mapping = aes(x = displ, y = hwy, linetype = drv))
 ```
 Here we make the line type depend on the cars drivetrain.
+
 
 ---
 
@@ -287,14 +290,199 @@ knitr::include_graphics("img/geoms.png")
 
 ---
 
+### Multiple geoms 1
+To display multiple geoms in the same plot, add multiple geom functions to ggplot():
+
+```{r}
+ggplot(data = mpg) + 
+  geom_point(mapping = aes(x = displ, y = hwy)) +
+  geom_smooth(mapping = aes(x = displ, y = hwy))
+```
+
+---
+
+### Multiple geoms 2
+We can avoid repetition of aethetics by passing a set of mappings to ggplot(). 
+ggplot2 will treat these mappings as global mappings that apply to each geom in the graph. 
+
+```{r}
+ggplot(data = mpg, mapping = aes(x = displ, y = hwy)) +
+  geom_point() + 
+  geom_smooth()
+```
+
+
+---
+
+### Multiple geoms 3
+
+If you place mappings in a geom function, ggplot2 will use these mappings to extend or overwrite the global mappings for that layer only. This makes it possible to display different aesthetics in different layers.
+
+```{r}
+ggplot(data = mpg, mapping = aes(x = displ, y = hwy)) + 
+  geom_point(mapping = aes(color = class)) + 
+  geom_smooth()
+```
+
+
+---
+
+### Multiple geoms 4
+
+You can use the same idea to specify different data for each layer. Here, our smooth line displays just a subset of the mpg dataset, the subcompact cars. The local data argument in geom_smooth() overrides the global data argument in ggplot() for that layer only.
+
+```{r}
+ggplot(data = mpg, mapping = aes(x = displ, y = hwy)) + 
+  geom_point(mapping = aes(color = class)) + 
+  geom_smooth(data = filter(mpg, class == "subcompact"), se = FALSE)
+```
+
+---
+
+### Statistical transformationas - e.g. Bar charts
+
+This example uses the built-in dataset "diamonds".
+
+```{r}
+ggplot(data = diamonds) + 
+  geom_bar(mapping = aes(x = cut))
+```
+
+The algorithm uses a built-in statistical trandformation, called a "stat", to calcluate the counts.
+
+---
+
+# Bar charts 2
+
+You can over-ride the stat a geom uses to construct its plot. e.g., if we want to plpot proportions, rather than counts:
+
+```{r}
+ggplot(data = diamonds) + 
+  geom_bar(mapping = aes(x = cut, y = stat(prop), group = 1))
+```
+
+---
+
+# Coloring barcharts
+
+You can colour a bar chart using either the colour aesthetic, or, more usefully, fill:
+
+```{r}
+ggplot(data = diamonds) + 
+  geom_bar(mapping = aes(x = cut, colour = cut))
+ggplot(data = diamonds) + 
+  geom_bar(mapping = aes(x = cut, fill = cut))
+```
+
+More interestingly, you can fill by another variable (here, 'clarity')
+
+```{r}
+ggplot(data = diamonds) + 
+  geom_bar(mapping = aes(x = cut, fill = clarity))
+```
+
+position = "dodge" places overlapping objects directly beside one another. This makes it easier to compare individual values.
+
+```{r}
+ggplot(data = diamonds) + 
+  geom_bar(mapping = aes(x = cut, fill = clarity), position = "dodge")
+```
+
 
 
 
 ---
 
-### File under useless but cool
+### Statistical transformations - another example
 
-ggpattern - library for adding pattern fills to histograms. e.g.,
+You might want to draw greater attention to the statistical transformation in your code. For example, you might use stat_summary(), which summarises the y values for each unique x value, to draw attention to the summary that you???re computing:
+
+```{r}
+ggplot(data = diamonds) + 
+  stat_summary(
+    mapping = aes(x = cut, y = depth),
+    fun.min = min,
+    fun.max = max,
+    fun = median
+  )
+```
+
+
+---
+ 
+### Position adjustments
+ 
+An option that can be very useful is position = "jitter".
+This adds a small amount of random noise to each point. This spreads out points that might otherwise be overlapping. e.g., 
+
+
+```{r}
+nojitter <- ggplot(data = mpg) + 
+  geom_point(mapping = aes(x = displ, y = hwy))
+jitter <- ggplot(data = mpg) + 
+  geom_point(mapping = aes(x = displ, y = hwy), position = "jitter")
+
+plot_grid(nojitter, jitter, labels = "AUTO")
+```
+
+---
+
+### Coordinate systems
+
+Coordinate systems are one of the more complicated corners of ggplot.
+To start with something simple, here's how to flip axes:
+
+```{r}
+unflipped <- ggplot(data = mpg, mapping = aes(x = class, y = hwy)) + 
+  geom_boxplot()
+flipped <- ggplot(data = mpg, mapping = aes(x = class, y = hwy)) + 
+  geom_boxplot() +
+  coord_flip()
+plot_grid(unflipped, flipped, labels = "AUTO")
+```
+
+There is also the ability to control the aspect ratio using coord_quickmap()  and to use polar coordinates with coord_polar().
+
+```{r}
+bar <- ggplot(data = diamonds) + 
+  geom_bar(
+    mapping = aes(x = cut, fill = cut), 
+    show.legend = FALSE,
+    width = 1
+  ) + 
+  theme(aspect.ratio = 1) +
+  labs(x = NULL, y = NULL)
+
+bar + coord_flip()
+bar + coord_polar()
+```
+
+---
+
+### A Great reference
+
+A great (comprehensive) reference for everything you can do with ggplot2 is the R Graphics Cookbook:
+
+https://r-graphics.org/
+
+---
+
+### Reminder - the ggplot2 cheatsheet
+
+A briefer summary can be found here:
+
+https://rstudio.com/wp-content/uploads/2015/03/ggplot2-cheatsheet.pdf
+
+Rstudio has a variety of other great Cheatsheets.
+
+---
+
+
+---
+
+### Finally, file under "useless but cool"
+
+ggpattern - is a library for adding pattern fills to histograms. e.g.,
 
 ```{r}
 # install.packages("remotes")
@@ -320,81 +508,6 @@ ggplot(df) +
   coord_fixed(ratio = 1/2)
 ```
 
-
-
-
----
-
-### Reminder - the ggplot2 cheatsheet
-
-https://rstudio.com/wp-content/uploads/2015/03/ggplot2-cheatsheet.pdf
-
-Rstudio has a variety of great Cheatsheets.
-
 ---
 
 
-### The remaining slides are "notes to self"
-
-Figure placement in Xaringen...
-
-Figures can be placed in the center
-.center[
-![](img/favicon-256.png)
-]
-or by default...
-![](img/favicon-256.png)
-
----
-
-background-image: url("img/1280.png")
-background-position: center
-background-size: contain
-
-# How to use baxckground images?
-
-This doesn't work when knitted to html...
-
-<span style="color: red;">
-This lecture provides an introduction to ggplot2, an R package that provides vastly better graphics options than R's default plots, histrograms, etc.
-</span>
-
-<span style="color: red;">
-This section is based on chapter 3 of  "R for Data Science", by Grolemund and Wickham:
-https://r4ds.had.co.nz/
-</span>
-
-
-
----
-
-This is how to introduce slide elements incrementally in Xaringen (i.e. use the --)
-
-The holy passion of Friendship is of so sweet and steady
-and loyal and enduring a nature that it will last through
-a whole lifetime...
-
---
-
-_if not asked to lend money_.
-
-
---- Mark Twain
-
----
-
-background-image: url("`r xaringan:::karl`")
-background-position: center
- 
-<span style="color: red;">
-And this is how to use a background image of Karl Broman
-</span>
-
-### Other Resources: 
-
-<span style="color: red;">
-"Mastering Software Development in R" - Roger Peng
-which can be found at https://bookdown.org/rdpeng/RProgDA/basic-plotting-with-ggplot2.html
-</span>
-
----
